# fairypieces-engine

./: Cargo.toml  README.md
src/: board.rs  delta.rs  game.rs  games.rs  lib.rs  math.rs  piece.rs  util.rs  victory_conditions.rs
src/games/: international_chess.rs
