[package]
name = "fairypieces-engine"
version = "0.1.0"
authors = ["Jakub HlusiÄka <limeth@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-array = "0.14.4"
lazy_static = "1.4.0"
smallvec = "1.4.2"
itertools = "0.10.0"
