[package]
name = "fairypieces-engine"
version = "0.1.0"
authors = ["Jakub Hlusička <limeth@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-array = "0.14.4"
lazy_static = "1.4.0"
smallvec = "1.4.2"
itertools = "0.10.0"
colored = "2.0.0"
replace_with = "0.1.7"
dyn-clone = "1.0.4"
hibitset = "0.6.3"
backtrace = "0.3"

[profile.dev]
opt-level = 3 # all optimizations
debug-assertions = true

[profile.release]
debug = true
